syntax = "proto3";

package order.service.v1;

import "google/api/annotations.proto";

option go_package = "api/order/service/v1;v1";


service UserService {
  rpc GetUsersByCond (GetUsersByCondRequest) returns (GetUsersByCondReply) {}

  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserReply) {}

}


message RegisterUserRequest {
  string  userMobile = 1; // 手机号
  string  password = 4; // 登录密码
}
message RegisterUserReply{
  uint32  retCode = 1;
  string  retMsg = 2;
}
message GetUsersByCondRequest {
  User userCond = 1;
}
message GetUsersByCondReply {
  uint32  retCode = 1;
  string  retMsg = 2;
  repeated  User userList = 3;
}


message User {
  uint64 userId = 1;
  string userMobile = 2;
  string loginPassword = 3;
  string userMail = 4;
  string userWxNumber = 5;
  string userNickName = 6;
  string userRealName = 7;
  string userBirthDate = 8;
  string userRegRegion = 9;
  string userRegIp = 10;
  string lastLoginRegion = 11;
  string lastLoginIp = 12;
  uint32 userSex = 14;
  uint32 userStatus = 15;
  uint32 score = 18;
}

message UserDeliveryAddr {
  int64  serDeliveryAddrId = 1;
  uint64 userId = 2;
  string receiver = 3;
  int32  provinceId = 4;
  string province = 5;
  int32  cityId = 6;
  string city = 7;
  int32  areaId = 8 ;
  string area = 9;
  string detail = 10;
}